--- a/libvlc/build.gradle
+++ b/libvlc/build.gradle
@@ -37,6 +37,8 @@ android {
             path "CMakeLists.txt"
         }
     }
+    android.ndkVersion "22.1.7171670"
+    
 //    buildFeatures {
 //        prefabPublishing true
 //    }
